se ajusto el link de las imagenes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rick and morty
+  </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-  </title>
+ 
   <link rel="stylesheet" href="./styles.css">
 </head>
 <!--Tiene todas las configuraciones-->
@@ -28,7 +29,7 @@
 
     <div class="personajes"> 
       <h1>Rick sanchez</h1>
-      <img src="imagenes/Rick.jpeg " alt="" width="200">
+      <img src="Imagenes/Rick.jpeg " alt="" width="200">
         <p>Genero: Masculino</p>
         <p>Especie: Humano</p>
       </div>
@@ -36,14 +37,14 @@
   
   <div class="personajes">
     <h1>Morty smith</h1>
-    <img src="imagenes/Morty.jpeg " alt="" width="200">
+    <img src="Imagenes/Morty.jpeg " alt="" width="200">
       <p>Genero: Masculino</p>
       <p>Especie: Humano</p>
    </div>
 
   <div class="personajes">
     <h1>summer </h1>
-    <img src="imagenes/Summer.jpeg" alt="" width="200">
+    <img src="Imagenes/Summer.jpeg" alt="" width="200">
       <p>Genero: Femenino</p>
       <p>Especie: Humano</p>
     </div>
@@ -60,7 +61,7 @@
 
   <div class="personajes">
     <h1>beth smith</h1>
-    <img src="imagenes/Beth.jpeg " alt="" width="200">
+    <img src="Imagenes/Beth.jpeg " alt="" width="200">
       <p>Genero: Femenino</p>
       <p>Especie: Humano</p>
     </div>
