--- a/sobremi.html
+++ b/sobremi.html
@@ -10,14 +10,19 @@
   </title>
   <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
-  <nav>
-    
-  </button>
-</div>
 
-</body>
+<body>
+
+  <nav> 
+    <ul class="menu">
+      <li> <a href="./index.html"> Inicio</a> </li>
+      <li> <a href="./sobremi.html"> Sobre mi</a> </li>
+      <li> <a href="./contacto.html"> Contactame</a> </li>
+    </ul>
+   </nav>
+  
 <h1>
   Esta seccion te permitira conocer mas de mi
 </h1>
+</body>
 </html>
